--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,9 @@
     --radius: 0.5rem;
   }
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 210, 20%, 8%;
     --foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
+    --card: 0 0% 4.9%;
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
@@ -58,6 +58,17 @@
     --text-white: 210 40% 98%;
   }
 }
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(0); /* Default icon warna hitam */
+}
+
+.dark input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Mengubah icon menjadi putih pada mode gelap */
+}
+
+/* Default style */
+
+
 @layer base {
   * {
     @apply border-border;
